--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "cordova-plugin-ionic": "5.5.2",
     "core-js": "^3.6.5",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
